Segunda version de proyecto FJF

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="YOGA">
-	<link rel="shortcut icon" href="img/Logo.jpg">
+	<link rel="shortcut icon" href="img/Logo.jpg".jpg">
 	<link rel="stylesheet" href="index.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,8 @@
 		<h1> COMUNA YOGA </h1>
 			<div class="principal">
 				<div class="logoPrincipal">
-					<img class="img-1" src="../ejemplo/img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA"> 
-					<img class="img-3" src="../ejemplo/img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA">
+					<img class="img-1" src="../nuevo_repo/img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA"> 
+					<img class="img-3" src="../nuevo_repo/img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA">
 				</div>
  			</div>
 			
@@ -53,7 +53,7 @@
 				<h2>  SOMOS COMUNA YOGA </h2>
 				
 				<div class="fotoTexto">
-					<img class="img-2" src="../ejemplo/img/Foto.jpg" alt="Foto Mer y Fran" title="Fran y Mer">
+					<img class="img-2" src="../nuevo_repo/img/Foto.jpg" alt="Foto Mer y Fran" title="Fran y Mer">
 					<p id="texto"> Espacio colectivo integrado por personas que comparten un mismo interés: el autoconocimiento, mediante la práctica de disciplinas tales como el Yoga, Meditación y Pranayama. 
 							A través de la búsqueda del equilibrio físico, mental y emocional, y desde un lugar de contención, respeto, escucha y amor, cambiaremos la percepción del cuerpo que habitamos, de la respiración como fuente de energía vital, y hallaremos el reflejo de nuestra esencia.</p>
 							<br>
@@ -66,10 +66,10 @@
 		<footer>
 			<div>
 				<a href="https://www.instagram.com/comunayoga/?hl=es">
-					<img id="Insta" src="../ejemplo/img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
+					<img id="Insta" src="../nuevo_repo/img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
 				</a>
 				<br>
-					<img src="../ejemplo/img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
+					<img src="../nuevo_repo/img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
 					<h3>espaciocomunayoga@gmail.com</h3>
 			</div>
 		</footer>
