--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -23,7 +23,7 @@
  			</div>
 			
 	</header>
-		<nav>	
+		<nav><br><br>	
 			<ul>
 			<li>
 					<a href="../index.html">Home</a> 
@@ -52,11 +52,11 @@
 		<main>
 			<h2>  GALERIA DE FOTOS </h2>
 			<div id="fondoFotos">	
-				<img class="fotosdegaleria1" src="../img/Agus2.jpg" alt="Agustin" title="Agus">
+				<img class="fotosdegaleria1" src="../img/agus2.jpg" alt="Agustin" title="Agus">
 		    	<img class="fotosdegaleria2" src="../img/fran y mer.jpg" alt="Fran y Mer" title="Fran y Mer" >
 			    <img class="fotosdegaleria3" src="../img/mer y fran.jpg" alt="Fran y Mer" title="Fran y Mer">
 			    <img class="fotosdegaleria4" src="../img/mer y fran2.jpg" alt="Fran y Mer" title="Fran y Mer">
-				<img class="fotosdegaleria5" src="../img/Agus3.jpg" alt="Agustin" title="Agus">
+				<img class="fotosdegaleria5" src="../img/agus3.jpg" alt="Agustin" title="Agus">
 			    <img class="fotosdegaleria6" src="../img/Fran3.jpg" alt="Francy" title="Fran">
 			    <img class="fotosdegaleria7" src="../img/Fran.jpeg" alt="Francy" title="Fran ">
 			    <img class="fotosdegaleria8" src="../img/Mer2.jpg" alt="Mercedes" title="Mer">
@@ -64,14 +64,14 @@
 		</main>
 	
 <footer>
-		<div>
-			<a href="https://www.instagram.com/comunayoga/?hl=es">
-				<img id="Insta" src="../img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
-			</a>
-			<br>
-				<img src="../img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
-				<h3>espaciocomunayoga@gmail.com</h3>
-		</div>
-	</footer>
+			<div>
+				<a href="https://www.instagram.com/comunayoga/?hl=es">
+					<img id="Insta" src="../img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
+				</a>
+				<br>
+					<img src="../img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
+					<h3 id="mail">espaciocomunayoga@gmail.com</h3>
+				</div>
+		</footer>
 </body>
 </html>
