--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<h1> COMUNA YOGA </h1>
 			<div class="principal">
 				<div class="logoPrincipal">
-					<img class="img-1" src="../nuevo_repo/img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA"> 
-					<img class="img-3" src="../nuevo_repo/img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA">
+					<img class="img-1" src="img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA"> 
+					<img class="img-3" src="img/Casalogo.jpg" alt="Logo casa" title="COMUNA YOGA">
 				</div>
  			</div>
 			
 	</header>
-	<nav>	
+	<nav><br><br>
 			<ul>
 			<li>
 					<a href="index.html">Home</a> 
@@ -66,12 +66,12 @@
 		<footer>
 			<div>
 				<a href="https://www.instagram.com/comunayoga/?hl=es">
-					<img id="Insta" src="../nuevo_repo/img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
+					<img id="Insta" src="img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
 				</a>
 				<br>
-					<img src="../nuevo_repo/img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
-					<h3>espaciocomunayoga@gmail.com</h3>
-			</div>
+					<img src="img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
+					<h3 id="mail">espaciocomunayoga@gmail.com</h3>
+				</div>
 		</footer>
-</body>
-</html>
+	</body>
+	</html>
