--- a/paginas/clases.html
+++ b/paginas/clases.html
@@ -9,6 +9,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<title>COMUNA YOGA</title>
 </head>
 <body>
@@ -22,8 +24,8 @@
 				</div>
  			</div>
 			
-	</header>
-		<nav>	
+	</header> 
+		<nav><br><br>	
 			<ul>
 			<li>
 					<a href="../index.html">Home</a> 
@@ -52,96 +54,110 @@
 	<!-- Informacion de clases dias y horarios-->
 	<main>
 		<h2>CLASES POR INSTRUCTOR</h2>
-		
+			
+		<section>
+			<article>
+				<ul>
+					<li> INSTRUCTOR AGUS ILLANES</li>
+				</ul>
+			</article>
+		</section>
 
+		  <table class="table table-light table-striped">
+			<thead>
+			  <tr class="table-success">
+				<th scope="col">ESTILO DE YOGA</th>
+				<th scope="col">DÍA</th>
+				<th scope="col">HORARIOS</th>
+				<th scope="col">VALORES</th>
+			  </tr>
+			</thead>
+			<tbody>
+			  <tr>
+				<th scope="row">Ashtanga Mysore</th>
+				<td>Jueves</td>
+				<td>20:00 hs</td>
+				<td><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</td>
+			  </tr>
+			  <tr>
+				<th scope="row">Hatha Yoga</th>
+				<td> Miércoles y Sábado </td>
+				<td>10:30 hs</td>
+				<td><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</td>
+			  </tr>
+			</tbody>
+		  </table>
 
-	
-			<section>
-				<article>
-					<ol>
-						<li>Instructor <a href="#Agustin">AGUS ILLANES</a></li> 
-						<li>Instructora <a href="#Francy">FRAN LOOSLI</a></li>
-						<li>Instructora <a href="#Mercedes">MER GARCIA</a></li></li>
-					</ol>
-				</article>
-			</section>
-			<section>
-
-				<article>
-					<h3 id="Agustin">HORARIOS - VALORES - CLASES DE AGUSTIN</h3>
-					<table border="1" cellpadding="1" cellspacing="1">
-						<tr> 
-							<th>Estilo de yoga</th>
-							<th>Día</th>
-							<th>Horario</th>
-							<th>Valor</th>
-
-						</tr>
-						<tr>
-							<td>Ashtanga Mysore</td>
-							<td>Jueves</td>
-							<td>20:00</td>
-							<th><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</th>
-
-						</tr>
-						<tr>
-							<td>Ashtanga guiada</td>
-							<td>Sábado</td>
-							<td>10:30</td>
-							<th><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</th>
-						</tr>
-					</table>
-				    </article>
-					<br> <br> <br> <br>
+				<section>
 					<article>
-						<h3 id="Francy">HORARIOS - VALORES - CLASES DE FRAN</h3>
-						<table border="1" cellpadding="1" cellspacing="1">
-							<tr>
-								<th>Estilo de yoga</th>
-								<th>Día</th>
-								<th>Horario</th>
-								<th>Valor</th>
-							</tr>
-							<tr>
-								<td>Vinyasa Flow</td>
-								<td>Lunes</td>
-								<td>15:00</td>
-								<th><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</th>
-							</tr>
-							<tr>
-								<td>Hatha Yoga</td>
-								<td>Martes y jueves</td>
-								<td>11:00</td>
-								<th><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</th>
-							</tr>
-						</table>
+						<ul>
+							<li> INSTRUCTORA FRAN LOOSLI SAEZ</li>
+						</ul>
 					</article>
-					    <br> <br> <br> <br>
-						<article>
-							<h3 id="Mercedes">HORARIOS - VALORES - CLASES DE MER</h3>
-								<table border="1" cellpadding="1" cellspacing="1">
-									<tr>
-										<th>Estilo de yoga</th>
-										<th>Día</th>
-										<th>Horario</th>
-										<th>Valor</th>
-									</tr>
-									<tr>
-										<td>Ashtanga guiada</td>
-										<td>Martes</td>
-										<td>09:00</td>
-										<th><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</th>
-								    </tr>
-								    <tr>
-										<td>Ashtanga guiada</td>
-										<td>Miércoles</td>
-										<td>19:00</td>
-										<th><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</th>
-								    </tr>
-								</table>
-						</article>
+				</section>
+
+				  <table class="table table-light table-striped">
+					<thead>
+					  <tr class="table-primary">
+						<th scope="col">ESTILO DE YOGA</th>
+						<th scope="col">DÍA</th>
+						<th scope="col">HORARIOS</th>
+						<th scope="col">VALORES</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+						<th scope="row">Vinyasa Flow</th>
+						<td>Lunes</td>
+						<td>15:00 hs</td>
+						<td><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</td>
+					  </tr>
+					  <tr>
+						<th scope="row">Hatha Yoga</th>
+						<td>Martes y jueves</td>
+						<td>11:00 hs</td>
+						<td><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</td>
+					  </tr>
+					</tbody>
+				  </table>
+
+				<section>
+					<article>
+						<ul>
+							<li> INSTRUCTORA MER GARCIA DI MARE</li>
+						</ul>
+					</article>
+				</section>
+				  <table class="table table-light table-striped">
+					<thead>
+					  <tr class="table-dark">
+						<th scope="col">ESTILO DE YOGA</th>
+						<th scope="col">DÍA</th>
+						<th scope="col">HORARIOS</th>
+						<th scope="col">VALORES</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+						<th scope="row">Ashtanga guiada</th>
+						<td>Martes</td>
+						<td>09:00 hs</td>
+						<td><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</td>
+					  </tr>
+					  <tr>
+						<th scope="row">Ashtanga guiada	</th>
+						<td>Miércoles y Viernes</td> 
+						<td>19:00 hs</td>
+						<td><a href="https://www.instagram.com/comunayoga/?hl=es">Click aquí</td>
+					  </tr>
+					</tbody>
+				  </table>
+
+				
 <!--Se ubica el lugar para las clases grupales en lugar abierto-->
-						<article>
+						
+
+							<article id="mapa">
 	
 								<table>
 									<tr>
@@ -163,16 +179,16 @@
 			</section>
 		</article>
 	</section>
-	</main>
+</main>
 	<footer>
 		<div>
-				<a href="https://www.instagram.com/comunayoga/?hl=es">
+			<a href="https://www.instagram.com/comunayoga/?hl=es">
 				<img id="Insta" src="../img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
 			</a>
 			<br>
 				<img src="../img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
-				<h3>espaciocomunayoga@gmail.com</h3>
-		</div>
+				<h3 id="mail">espaciocomunayoga@gmail.com</h3>
+			</div>
 	</footer>
 </body>
 </html>
