--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -22,8 +22,8 @@
 				</div>
  			</div>
 			
-	</header>
-		<nav>	
+		</header>
+		<nav><br><br>	
 			<ul>
 			<li>
 					<a href="../index.html">Home</a> 
@@ -104,15 +104,15 @@
 		</article>
 	</section>
 </Main>
-	<footer>
-		<div>
-			<a href="https://www.instagram.com/comunayoga/?hl=es">
-				<img id="Insta" src="../img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
-			</a>
-			<br>
-				<img src="../img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
-				<h3>espaciocomunayoga@gmail.com</h3>
+<footer>
+	<div>
+		<a href="https://www.instagram.com/comunayoga/?hl=es">
+			<img id="Insta" src="../img/Insta.png" alt="INSTAGRAM" title="Instagram Comuna Yoga">
+		</a>
+		<br>
+			<img src="../img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
+			<h3 id="mail">espaciocomunayoga@gmail.com</h3>
 		</div>
-	</footer>
+</footer>
 </body>
 </html>
