--- a/paginas/instructores.html
+++ b/paginas/instructores.html
@@ -25,7 +25,7 @@
  			</div>
 			
 	</header>
-		<nav>	
+		<nav><br>
 			<ul>
 			<li>
 					<a href="../index.html">Home</a> 
@@ -62,7 +62,7 @@
 				<div class="card bg-light mb-3" style="max-width: auto" >
 					<div class="row g-0">
 					  <div class="col-md-5">
-						<img src="../img/Agus.jpg" alt="AGUS ILLANES" title="Agus Illanes" class="img-fluid rounded-end" style="width: 380PX">
+						<img src="../img/Agus4.jpg" alt="AGUS ILLANES" title="Agus Illanes" class="img-fluid rounded-end" style="width: 380PX">
 					  </div>
 					  <div class="col-md-5">
 						<div class="card-body">
@@ -116,7 +116,7 @@
 				  <div class="card bg-light mb-3" style="max-width: auto" >
 					<div class="row g-0">
 					  <div class="col-md-5">
-						<img src="../img/Mer.jpg" alt="Mer Garcia" title="MER GARCIA" class="img-fluid rounded-end" style="width: 380PX">
+						<img src="../img/Mer2.jpg" alt="Mer Garcia" title="MER GARCIA" class="img-fluid rounded-end" style="width: 380PX">
 					  </div>
 					  <div class="col-md-5">
 						<div class="card-body">
@@ -136,38 +136,6 @@
 					</div>
 				  </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-				<!---
-				
-					<h3>MER GARCIA</h3>
-						
-							Las clases tratan de un recorrido por la primer serie llamada “Yoga Chikitsa” cómo forma de dar inicio a un espacio de práctica para quienes se introducen o desean continuar profundizando en la misma.
-							A través de cada clase lxs alumnxs conocerán el armado de las asanas, o en caso de precisarlo, una adaptación para transitar de esa forma la serie según las necesidades individuales. 
-							Además, aprenderán a coordinar las asanas con la respiración y los drishtis o puntos de mirada, llegando finalmente al armado de secuencias continuas que fluyen entre sí elevando el fuego intestinal o “agni”, el cual purifica nuestros cuerpos y sentidos. 
-							Nos dejamos envolver por la dinámica que cada encuentro propone encontrando un momento de contacto colectivo y al mismo tiempo individual. 
-							Cada práctica será diferente, pero en sintonía con el objetivo que nos trae el Yoga, hallaremos un bienestar integral que nos permitirá desenvolvernos en nuestra cotidianeidad de una forma más saludable, auténtica y calma.</p>
-							<aside> 
-								<img src="../img/Mer.jpg" alt="Mer Garcia" title="MER GARCIA">
-							</aside>		
-
-
-				</div>
-
-
-				<p>Visita mi <a href="projects/index.html">página de inicio del proyecto</a>.</p>
-			-->
 			</main>
 	<footer>
 		<div>
@@ -176,9 +144,8 @@
 			</a>
 			<br>
 				<img src="../img/mail.png" alt="E-MAIL" title="E-MAIL: espaciocomunayoga@gmail.com"> 
-				<h3>espaciocomunayoga@gmail.com</h3>
-		</div>
+				<h3 id="mail"><b>espaciocomunayoga@gmail.com</b></h3>
+			</div>
 	</footer>
-
 </body>
 </html>
