--- a/paginas/clases.html
+++ b/paginas/clases.html
@@ -58,7 +58,7 @@
 		<section>
 			<article>
 				<ul>
-					<li> INSTRUCTOR AGUS ILLANES</li>
+					<li class="instructores"> INSTRUCTOR AGUS ILLANES</li>
 				</ul>
 			</article>
 		</section>
@@ -91,7 +91,7 @@
 				<section>
 					<article>
 						<ul>
-							<li> INSTRUCTORA FRAN LOOSLI SAEZ</li>
+							<li class="instructores"> INSTRUCTORA FRAN LOOSLI SAEZ</li>
 						</ul>
 					</article>
 				</section>
@@ -124,7 +124,7 @@
 				<section>
 					<article>
 						<ul>
-							<li> INSTRUCTORA MER GARCIA DI MARE</li>
+							<li class="instructores"> INSTRUCTORA MER GARCIA DI MARE</li>
 						</ul>
 					</article>
 				</section>
@@ -159,19 +159,9 @@
 
 							<article id="mapa">
 	
-								<table>
-									<tr>
-											<td>
-											<h4><u>Localización de lugar para clases grupales</u></h4>
-											</td>
-									</tr>
+											<h4 class="tituloCuarto"><u>Localización de lugar para clases grupales</u></h4>
 									
-									<tr>
-										<td>
-											<iframe src="https://google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.801520155083!2d-58.411020584770824!3d-34.58388838046465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57dbce045cd%3A0x2704541ae686099a!2sParque%20Las%20Heras!5e0!3m2!1ses-419!2sar!4v1639415399052!5m2!1ses-419!2sar" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-										</td>
-									</tr>
-								</table>
+											<iframe src="https://google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.801520155083!2d-58.411020584770824!3d-34.58388838046465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57dbce045cd%3A0x2704541ae686099a!2sParque%20Las%20Heras!5e0!3m2!1ses-419!2sar!4v1639415399052!5m2!1ses-419!2sar" width="100%" height="100" frameBorder="2" allowfullscreen="" loading="lazy"></iframe>
 
 
 
