--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,6 +9,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<title>COMUNA YOGA</title>
 </head>
 <body>
@@ -53,7 +55,58 @@
 	<section>
 		<h2>CONTACTO</h2>
 	</section>
-	<!-- Form para consultas -->
+	<div id="fotoFondo">
+	<h4 id="tituloContacto">
+		INDÍCANOS TU CORREO ELECTRONICO
+    </h4>
+
+	<div class="mb-3">
+		<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="correoelectronico@ejemplo.com">
+	  </div>
+
+	  <h4 id="tituloContacto">
+		¿CÚAL ES TU NOMBRE?
+	  </h4>
+
+	  <div class="mb-3">
+		<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Tu nombre">
+	  </div>
+	
+	  <h4 id="tituloContacto">
+		PREGUNTA O HAZ SABER CUALQUIER INQUIETUD
+	  </h4>
+
+	  <div class="mb-3">
+		<textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+	  </div>
+
+	  <h4 id="tituloContacto">
+			¿Que estilo de Yoga realizaste?
+	  </h4>
+
+	  <div class="mb-3 form-check d-flex justify-content-center">
+		<input type="checkbox" class="form-check-input" id="exampleCheck1">
+		<label class="form-check-label" for="exampleCheck1"><b>- HATHA YOGA - </b><label>
+	  </div>
+	  <div class="mb-3 form-check d-flex justify-content-center">
+		<input type="checkbox" class="form-check-input" id="exampleCheck1">
+		<label class="form-check-label" for="exampleCheck1"><b> - VINYASA FLOW - </b></label>
+	  </div>
+	  <div class="mb-3 form-check d-flex justify-content-center">
+		<input type="checkbox" class="form-check-input" id="exampleCheck1">
+		<label class="form-check-label" for="exampleCheck1"><b> - ASHTANGA - </b></label>
+	  </div>
+	  <div class="d-flex justify-content-center">
+	  <button type="submit" class="btn btn-danger text-center mb-4" >ENVIAR</button>
+	</div>
+
+	</div>
+
+
+
+
+
+	<!-- Form para consultas 
 	<section>
 		<article>
 			<div class="formularios">
@@ -102,8 +155,9 @@
 				</div>
 			</form>
 		</article>
-	</section>
+	</section>-->
 </Main>
+
 <footer>
 	<div>
 		<a href="https://www.instagram.com/comunayoga/?hl=es">
